<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/Status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/ScreenNames"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:hint="@string/Username"
                android:inputType="text" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/PasswordInput"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:hint="@string/Password"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/Submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/login"
                android:onClick="Login"/>

        </TableRow>
        <TableRow
            android:layout_marginTop="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/register"
                android:onClick="Register"/>


        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>